Fix Java 11 stream collection in hotspot analyzer
Co-authored-by: TalaatHarb <6714248+TalaatHarb@users.noreply.github.com>